[package]
name = "laplace_rs"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

# Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

statrs = "0.16.0"
rand = "0.8.5"
anyhow = "1.0.69"
