[package]
name = "laplace_rs"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.3"
statrs = { git = "https://github.com/statrs-dev/statrs", commit = "663c130" } # statrs not updated on crates.io, sorry
rand = "0.10.1"
anyhow = "1.0.69"
